--- a/Resources/views/Default/imageReturnTemplate.html.twig
+++ b/Resources/views/Default/imageReturnTemplate.html.twig
@@ -1,2 +1,2 @@
-<meta http-equiv="content-type" content="{{ header.content-type }}"; charset=ISO-8859-1">
+<meta http-equiv="content-type" content="{{ header }}"; charset=ISO-8859-1">
 {{ binaryPic }}
